demo实例代码